envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  safe_regex:
                    google_re2: {}
                    regex: "^/core/v\\d{1}/wikipedia/en/.*$"
                route:
                  regex_rewrite:
                    pattern:
                      google_re2: {}
                      regex: ".*\/([^\/]+)\/wikipedia\/([^\/]+)(\/.*)$"
                    substitution: /w/rest.php/\1\3
                  auto_host_rewrite_header: "x-internal-host"
                  cluster: service_echoapi
              - match:
                  prefix: "/"
                route:
                  host_rewrite: www.google.com
                  cluster: service_echoapi
          http_filters:
          - name: envoy.filters.http.lua
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.http.lua.v2.Lua
              inline_code: |
                function envoy_on_request(request_handle)
                  local path = request_handle:headers():get(":path")
                  project, lang = string.match(path, "^/%a+/v%d/(%a+)/(%a+)/.*$")

                  request_handle:headers():add("x-internal-host", lang .. "." ..project .. ".org")

                  -- Dynamic metadata; Can be accessed by other filters
                  request_handle:requestInfo():dynamicMetadata():set("envoy.lua", "lang", lang)
                  request_handle:requestInfo():dynamicMetadata():set("envoy.lua", "project", project)
                  request_handle:requestInfo():dynamicMetadata():set("envoy.lua", "hostname", lang .. "." .. project .. ".org")
                end
          - name: envoy.filters.http.router
  clusters:
  - name: service_echoapi
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_echoapi
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: echoapi
                port_value: 8080
    # From Getting Started; Disabled here...
    # transport_socket:
    #   name: envoy.transport_sockets.tls
    #   typed_config:
    #     "@type": type.googleapis.com/envoy.api.v2.auth.UpstreamTlsContext
    #     sni: www.google.com
